# pulse-data

./: .gitignore  CHANGELOG.md  CLA.md  COMMERCIAL.md  LICENSE-AGPL-3.0  LICENSE-COMMERCIAL.txt  NOTICE  README.md  SECURITY.md  pom.xml  py_environment.yml  py_environment_311.yml  py_environment_314.yml  pyproject.toml
.github/workflows/: ci.yml  dco.yml
airflow/: airflow_pipeline_adapters.py  airflow_setup.sh
airflow_pipelines/: airflow_pipeline_adapters.py  airflow_setup.sh
commons/ftp/: FtpWrapper.py
commons/parametrization/: PythonParametrization.py  __init__.py
commons/utils/: DateAndTimeUtils.py  FileUtils.py  LoggingUtils.py
datum/python/: __init__.py
datum/python/inventzia/pulse/data/datum/: codec.py  datum.py
pipelines/: DataPipeline.py  HistDataPipeline.py
schemas/schemas-generators/: autogenerate_schemas.py  autogenerate_schemas_with_fields.py  generate_java.py  generate_python.py  readme.md
schemas/schemas-java/com/pulse/data/schemas/: EventMetadata.java  EventPayload.java
schemas/schemas-py/: __init__.py  event_metadata.py
schemas/schemas-py/marketdata/: __init__.py  cdf_bar.py
schemas/schemas-yaml/: event_metadata.yaml
schemas/schemas-yaml/marketdata/: cdf_bar.yaml
schemas/schemas_java/com/inventzia/pulse/data/schemas/: DatumTypeRegistry.java
schemas/schemas_java/com/inventzia/pulse/data/schemas/common/: VectorValue.java
schemas/schemas_java/com/inventzia/pulse/data/schemas/marketdata/: CdfBar.java
schemas/schemas_java/com/inventzia/pulse/data/schemas/platform/: HeartBeat.java  (+1 more)
schemas/schemas_java/com/pulse/data/schemas/marketdata/: MarketDataBar.java
schemas/schemas_py/: event_metadata.py
schemas/schemas_py/inventzia/pulse/data/schemas/: registry.py
schemas/schemas_py/inventzia/pulse/data/schemas/platform/: heart_beat.py  text_message.py
schemas/schemas_py/marketdata/: cdf_bar.py
schemas/schemas_yaml/: event_metadata.yaml
schemas/schemas_yaml/common/: vector_value.yaml
schemas/schemas_yaml/marketdata/: cdf_bar.yaml
schemas/schemas_yaml/platform/: heartbeat.yaml  text_message.yaml
src/inventzia/pulse/data/: __init__.py
src/inventzia/pulse/data/datum/: __init__.py  codec.py
src/inventzia/pulse/data/schemas/: registry.py
src/inventzia/pulse/data/schemas/common/: vector_value.py
src/inventzia/pulse/data/schemas/marketdata/: cdf_bar.py
src/inventzia/pulse/data/schemas/platform/: heart_beat.py  text_message.py
storage/: ISchemaStorage.py
storage/file/: FileStorage.py
storage/sqldb/: SqlGenerics.py  SqlSchemaStorage.py
(+3 files in other folders)
